# c-huawei

./: .gitignore  CMakeLists.txt  README.md  main.c  main.sh
libs/: sorting.c  sorting.h  string.c  string.h  utils.c  utils.h
